--- a/style.css
+++ b/style.css
@@ -1,1 +1,113 @@
+* {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
+nav {
+    height: 10vh;
+    background: rgb(51, 120, 185);
+}
+.nav-links {
+    display: flex;
+}
+
+
+h1 {
+    padding-top: 1%;
+    text-align: center;
+    font-size: 100%;
+    text-decoration-color: grey;
+}
+
+/* End of Header */
+
+/* Beginning of Carousel CSS */
+
+.carousel {
+    position: relative;
+    height: 600px;
+    width: 80%;
+    margin: 0 auto;
+}
+
+.carousel, h2 {
+    text-align: center;
+    padding: 10px 0 0 50px;
+}
+
+.carousel-image {
+    width: 100%;
+    height: 100%;
+    
+}
+
+ .carousel-container {
+     background: grey;
+     height: 100%; 
+     position: relative;
+     margin: center;
+ }
+
+ .carousel-track {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+ }
+
+ .carousel-slide {
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 100%;
+      margin-left: unset;
+ }
+
+ .carousel-button {
+     position: absolute;
+     top: 50%;
+     transform: translateY(-60%);
+     border: 0;
+     cursor: pointer;
+     background: transparent;
+ }
+
+ .carousel-button img {
+     width: 40px;
+ }
+
+ .carousel-button--left {
+    left: -50px;
+}  
+.carousel-button--right {
+   right: -50px;
+}  
+
+.carousel-navigation {
+    background: transparent;
+    display: flex;
+    justify-content: center;
+    padding: 6px 0;
+}
+
+.carousel-dots {
+    border: 0;
+    border-radius: 50%;
+    width: 12px;
+    height: 12px;
+    background: grey;
+    margin: 0 10px;
+}
+
+.carousel-dots.current-slide {
+    background: rgba(0, 0,  0, 75);
+}
+
+/* End of Carousel CSS */
+
+/* Footer and contact me */
+
+
+
+/* End of footer */
