--- a/style.css
+++ b/style.css
@@ -6,8 +6,9 @@
 }
 
 nav {
-    height: 10vh;
-    background: rgb(51, 120, 185);
+    height: 8vh;
+    background: linear-gradient(#C6BDEA, #48ABF1);
+    z-index: 1;
 }
 .nav-links {
     display: flex;
@@ -21,12 +22,12 @@ nav {
 .nav-links li a{
     color: white;
     text-decoration: none;
-    font-size: 16px ;
+    font-size: 30px ;
 }
 
     .line{
         width:30px;
-        height: 3px;
+        height: 4px;
         background: white;
         margin: 5px; 
     }
@@ -45,7 +46,7 @@ nav {
     
     .nav-links {
         position: fixed;
-        background: rgb(51, 120, 185);
+        background:linear-gradient(#C6BDEA, #48ABF1);
         height: 100vh;
         width: 100%;
         flex-direction: column;
@@ -78,89 +79,43 @@ h1 {
 
 /* Beginning of Carousel CSS */
 
-.carousel {
-    position: relative;
+.carousel-container {
+    padding-top: 20px ;
     height: 600px;
-    width: 80%;
-    margin: 0 auto;
+    width: 60%;
+    margin: auto;
+   overflow: hidden; 
+
+}
+.carousel-slide {
+    display: flex;
+    width: 100%;
+    height: 500px;
 }
 
-.carousel, h2 {
-    text-align: center;
-    padding: 10px 0 0 50px;
-}
-
-.carousel-image {
+.carousel__photo{
     width: 100%;
     height: 100%;
-    
 }
 
- .carousel-container {
-     background: grey;
-     height: 100%; 
-     position: relative;
-     margin: center;
- }
-
- .carousel-track {
-    padding: 0;
-    margin: 0;
-    list-style: none;
- }
-
- .carousel-slide {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      width: 100%;
-      margin-left: unset;
- }
-
- .carousel-button {
+#prevbutton {
      position: absolute;
-     top: 50%;
-     transform: translateY(-60%);
+     top: 70%;
+     margin-left: 15rem;
+     transform: translateY(10%);
      border: 0;
      cursor: pointer;
      background: transparent;
- }
-
- .carousel-button img {
-     width: 40px;
- }
-
- .carousel-button--left {
-    left: -50px;
-}  
-.carousel-button--right {
-   right: -50px;
-}  
-
-.carousel-navigation {
-    background: transparent;
-    display: flex;
-    justify-content: center;
-    padding: 6px 0;
 }
 
-.carousel-dots {
+#nextbutton {
+    position: absolute;
+    top: 70%;
+    margin-right: 12rem;
+    right: 50px;
     border: 0;
-    border-radius: 50%;
-    width: 12px;
-    height: 12px;
-    background: grey;
-    margin: 0 10px;
+    cursor: pointer;
+    background: transparent;
 }
-
-.carousel-dots.current-slide {
-    background: rgba(0, 0,  0, 75);
-}
-
-/* End of Carousel CSS */
-
-/* Footer and contact me */
-
-
-
-/* End of footer */
+#prevbutton img{
+    width: 21px;
