--- a/style.css
+++ b/style.css
@@ -5,38 +5,46 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+}
+
 nav {
     height: 8vh;
-    background: linear-gradient(#C6BDEA, #48ABF1);
+    background:white;
     z-index: 1;
 }
 .nav-links {
     display: flex;
     list-style: none;
-    width: 50%;
+    width: 60%;
     height: 100%;
     justify-content: space-around;
     align-items: center;
     margin-left: auto
 }
 .nav-links li a{
-    color: white;
+    color: black;
     text-decoration: none;
-    font-size: 30px ;
-    font-family: "lobster";
+    font-size: 30px;
+    font-family: "hind madurai";
+    padding-top: 1rem;
 }
 
-    .line{
+.line{
         width:30px;
         height: 4px;
-        background: white;
+        background: black;
         margin: 5px; 
-    }
-    nav{
+        
+}
+
+
+nav{
         position: relative;
     }
 
-    .hamburger{
+.hamburger{
         position: absolute;
         cursor: pointer;
         right: 5%;
@@ -44,10 +52,25 @@ nav {
         transform: translate(-5%, -50%);
         z-index: 2;
     }
+
+.hamburger h1{
+        text-align: center;
+        position: absolute;
+        right: 50%;
+        top: 0;
+        margin-right: 32rem;
+        width: 280px;
+        font-family: "hind madurai";
+        font-weight: bolder;
+        font-size: 30px;
+        float: initial;
+        padding-bottom: 0.5rem;
+        white-space: nowrap;
+    }
     
-    .nav-links {
+.nav-links {
         position: fixed;
-        background:linear-gradient(#C6BDEA, #48ABF1);
+        background:linear-gradient(white, whitesmoke);
         height: 100vh;
         width: 100%;
         flex-direction: column;
@@ -55,28 +78,80 @@ nav {
         -webkit-clip-path: circle (50px at 90% -10%);
         transition: all 1s ease-out;
         pointer-events: none;
+
     }
-    .nav-links.open {
+.nav-links.open {
         clip-path: circle(50px at 90% -10%);
         -webkit-clip-path: circle(50px at 90% -10%); 
         pointer-events: all;
     }
-    .landing {
-        flex-direction: column;
+.landing {
+        flex-wrap: wrap;
       }
-.logo h4{
-    background: transparent;
+
+
+/* When I first started desinging the website, I really wanted a header picture 
+but was struggling to understand how to make it fit the page. So here hopefully
+I will be able to implement it after everything I've learnt */
+
+.header-image{
     padding-top: 1rem;
-    z-index: -1;
-    align-items: center;
-    min-height: 8vh;
+    position: absolute;
+    width: 100%;
+    height: 30%;
+    background: no-repeat 100%;
+    padding-bottom: 0.5rem;
+    flex-direction: row;
+
 }
 /* End of Header */
 
+/*Begin middle */
+
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 9px;
+    padding-right: 9px;
+  }
+.row{
+  display:inline-block;
+  }
+  .row::after {
+    clear: both;
+    display: table;
+  }
+.column img {
+    transition: 1s;
+    overflow: hidden;
+    height: 80%;
+}
+
+.column img:hover {
+    -ms-transform: scale(1.1); 
+    -webkit-transform: scale(1.1); 
+    transform: scale(1.1); 
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 1rem 3rem 1rem 3rem;
+}
+
+.container-2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 1rem 3rem 1rem 3rem;
+}
 /* Beginning of Carousel CSS */
 
 .carousel-container {
-    padding-top: 20px ;
+    padding-top: 100px ;
     height: 600px;
     width: 60%;
     margin: auto;
@@ -96,7 +171,7 @@ nav {
 
 #prevbutton {
      position: absolute;
-     top: 70%;
+     top: 100%;
      margin-left: 15rem;
      transform: translateY(10%);
      border: 0;
@@ -106,7 +181,7 @@ nav {
 
 #nextbutton {
     position: absolute;
-    top: 70%;
+    top: 100%;
     margin-right: 12rem;
     right: 50px;
     border: 0;
@@ -123,14 +198,63 @@ nav {
 
 /*footer */
 
+.contact-form{
+    font-family: "hind madurai";
+}
+form {
+    height:400px;
+    width:600px;;
+    background-color: white;
+    margin: center;
+    display: inline-table;
+    padding-left: 10rem;
+    justify-content: center;
+    flex-wrap: nowrap;
+    
+}
+form label {
+    font-size: 1rem;
+    font-family: "open sans";
+}
+input, select, textarea{
+    width: 100%;
+    padding: 1rem;
+    padding-bottom: 5px;
+}
+
+input,[type="submit"] {
+    width: initial;
+    background-color:whitesmoke;
+    padding: 1rem 2rem;
+    cursor: pointer;
+}
+
 footer {
-    background: lightgrey;
-    color: white;
-    text-align: center;
-    padding: 2.5rem;
-
+    padding-left: 1rem;
+    height: 100px;
+    background: #E5E5E5;
 }
 
-footer li a i {
-    color: linen;
+.social-icons a {
+    color: black;
+    text-decoration: none;
+    font-size: 30px;
 }
+
+.social-icons {
+    padding-top: 1rem;
+    display: flex;
+    list-style: none;
+    align-items: right;
+    float: right;
+    display: inline-block;
+    width: 100px;
+    padding-right: 4rem;
+}
+
+.social-media
+.social-icons:hover {
+    opacity: 0.8;
+}
+
+
