--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@
 }
 
 body{
-    background-color: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    background-color: #b3cdd1;
+    background-image: linear-gradient(315deg, #b3cdd1 0%, #9fa4c4 74%);
+
+
+
 }
 
 nav {
@@ -27,7 +31,7 @@ nav {
     color: black;
     text-decoration: none;
     font-size: 30px;
-    font-family: "hind madurai";
+    font-family: "Fredericka the Great";
     padding-top: 1rem;
 }
 
@@ -36,9 +40,14 @@ nav {
         height: 4px;
         background: black;
         margin: 5px; 
-        
+        transition: 1.5s;
 }
 
+.line:hover{
+    -ms-transform: scale(1.3); 
+    -webkit-transform: scale(1.3); 
+    transform: scale(1.3); 
+}
 
 nav{
         position: relative;
@@ -60,7 +69,7 @@ nav{
         top: 0;
         margin-right: 32rem;
         width: 280px;
-        font-family: "hind madurai";
+        font-family: "Fredericka the Great";
         font-weight: bolder;
         font-size: 30px;
         float: initial;
@@ -85,25 +94,12 @@ nav{
         -webkit-clip-path: circle(50px at 90% -10%); 
         pointer-events: all;
     }
+
 .landing {
         flex-wrap: wrap;
       }
 
 
-/* When I first started desinging the website, I really wanted a header picture 
-but was struggling to understand how to make it fit the page. So here hopefully
-I will be able to implement it after everything I've learnt */
-
-.header-image{
-    padding-top: 1rem;
-    position: absolute;
-    width: 100%;
-    height: 30%;
-    background: no-repeat 100%;
-    padding-bottom: 0.5rem;
-    flex-direction: row;
-
-}
 /* End of Header */
 
 /*Begin middle */
@@ -148,14 +144,45 @@ I will be able to implement it after everything I've learnt */
     width: 100%;
     padding: 1rem 3rem 1rem 3rem;
 }
+.row h1 {
+    font-weight: bolder;
+    text-align: center;
+    text-align: left;
+    padding-bottom: 1rem;
+    text-decoration: line-through;
+    font-family: "Fredericka the Great";
+    color: whitesmoke;
+    }
+h2 {
+    font-weight: bolder;
+    text-align: center;
+    text-align: left;
+    padding-bottom: 1rem;
+    white-space: nowrap;
+    text-decoration: line-through;
+    font-family: "Fredericka the Great";
+    color: whitesmoke
+}
+
+h3 {
+    font-weight: bolder;
+    text-align: center;
+    text-align: left;
+    padding-bottom: 1rem;
+    white-space: nowrap;
+    text-decoration: line-through;
+    font-family: "Fredericka the Great";
+    color: whitesmoke
+}
 /* Beginning of Carousel CSS */
 
 .carousel-container {
-    padding-top: 100px ;
+    padding-top: 50px ;
     height: 600px;
-    width: 60%;
+    width: 50%;
     margin: auto;
-   overflow: hidden; 
+    overflow: hidden; 
+    justify-content: center;
 
 }
 .carousel-slide {
@@ -169,31 +196,44 @@ I will be able to implement it after everything I've learnt */
     height: 100%;
 }
 
+/* THESE ARROWS ARE THE BANE OF MY EXISTANCE */
+/* JUST MOVE AND ALSO STOP MOVING EVERYHWHERE ELSE */
+
 #prevbutton {
      position: absolute;
-     top: 100%;
+     top: 150%;
      margin-left: 15rem;
      transform: translateY(10%);
-     border: 0;
+     border: 2px;
      cursor: pointer;
      background: transparent;
 }
 
 #nextbutton {
     position: absolute;
-    top: 100%;
+    top: 150%;
     margin-right: 12rem;
     right: 50px;
     border: 0;
     cursor: pointer;
     background: transparent;
 }
+
+.control {
+    position: absolute;
+    border: 10px;
+    cursor: pointer;
+    align-items: center;
+    height: 40px;
+    width: 40px;
+    margin-left: 30rem;
+}
 #prevbutton img{
-    width: 21px;
+    width: 30px;
 }
 
 #nextbutton img {
-    width: 21px;
+    width: 30px;
 }
 
 /*footer */
@@ -204,35 +244,75 @@ I will be able to implement it after everything I've learnt */
 form {
     height:400px;
     width:600px;;
-    background-color: white;
+    background-color: transparent;
     margin: center;
     display: inline-table;
-    padding-left: 10rem;
+    padding-left: 1rem;
     justify-content: center;
-    flex-wrap: nowrap;
     
 }
 form label {
     font-size: 1rem;
     font-family: "open sans";
 }
-input, select, textarea{
+
+input[type=text], select, textarea {
     width: 100%;
-    padding: 1rem;
-    padding-bottom: 5px;
-}
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+  
+  input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
 
 input,[type="submit"] {
     width: initial;
     background-color:whitesmoke;
     padding: 1rem 2rem;
     cursor: pointer;
+
+
+}.column_3 {
+    float: left;
+    width: 25%;
+    padding: 9px;
+    padding-right: 9px;
+  }
+.row-2{
+  display:inline-block;
+  }
+  .row-2::after {
+    clear: both;
+    display: table;
+  }
+.column_3 img {
+    transition: 1s;
+    overflow: hidden;
+    height: 80%;
+}
+
+.column_3 img:hover {
+    -ms-transform: scale(1.1); 
+    -webkit-transform: scale(1.1); 
+    transform: scale(1.1); 
 }
 
 footer {
     padding-left: 1rem;
-    height: 100px;
-    background: #E5E5E5;
+    height: 150px;
+    background: transparent;
 }
 
 .social-icons a {
@@ -243,6 +323,7 @@ footer {
 
 .social-icons {
     padding-top: 1rem;
+    padding-bottom: 1rem;
     display: flex;
     list-style: none;
     align-items: right;
